<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Diagnostico">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/pad_body">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_atras_frg_diag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_btn_gris_radio_50"
                    android:src="@drawable/ic_btn_atras" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/btn_no_es_el_resultado_frg_diag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/diagnostico_seccion1_accion2"
                    android:gravity="center"
                    android:background="@drawable/shape_btn_gris_radio_50"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_titulo_estado_salud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_entre_seccion"
                android:text="@string/diagnostico_seccion2_titulo"
                android:textSize="@dimen/sp_nivel_7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_pequeno"
                android:text="@string/diagnostico_seccion2_subtitulo1"
                android:textSize="@dimen/sp_nivel_4"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/verde_oscuro"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_entre_elem"
                android:scrollIndicators="right">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/w_img_carousel"
                        android:layout_height="@dimen/h_img_carousel"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/foto_cuadrada_ejemplo" />

                    <ImageView
                        android:layout_width="@dimen/w_img_carousel"
                        android:layout_height="@dimen/h_img_carousel"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/foto_cuadrada_ejemplo" />

                    <ImageView
                        android:layout_width="@dimen/w_img_carousel"
                        android:layout_height="@dimen/h_img_carousel"
                        android:src="@drawable/foto_cuadrada_ejemplo" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_pequeno"
                android:text="@string/diagnostico_seccion3_cant_fotos"
                android:textColor="@color/texto_claro"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            style="@style/style_rect_blanco_seccion_detalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/pad_body">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/style_rect_verde_item"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mrg_pequeno"
                    android:text="Diagnóstico"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_diagnostico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_entre_elem"
                android:text="@string/main_seccion1_descripcion"/>
            <TextView
                android:id="@+id/btn_link_diagnostico_frg_diag"
                style="@style/style_link_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_web"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/pad_body">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/style_rect_verde_item"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mrg_pequeno"
                    android:text="Tratamiento"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_tratamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_entre_elem"
                android:text="@string/main_seccion1_descripcion"/>
            <TextView
                android:id="@+id/btn_link_tratamiento_frg_diag"
                style="@style/style_link_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_web"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>